# OpenWorld

./: .gitignore  .npmrc  LICENSE  README.md  commit-msg-temp.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  screenshot_test.py  start-worldsmith.bat  start-worldsmith.sh  ts_errors.txt  tsconfig.app.json  vite-plugin-server-launcher.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.storybook/: main.ts  preview.ts  tsconfig.json
.superpowers/brainstorm/: visual-server.cjs
docs/: perf-kit-plan.md  video-mode-flow.html  video-mode-v2-flow.html
scripts/: clean.js  fix-targets.cjs  pack-font-presets.ts  remove-worker-url2.cjs  rewrite-worker-pool.cjs
src/: App.vue  main.ts  shims-vue.d.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/workflow/: dispatch_protocol.rs  engine.rs  error.rs  mod.rs  node_meta.rs  service.rs
src-tauri/src/workflow/commands/: definitions.rs  dispatch.rs  dry_run.rs  mod.rs  node_meta.rs  runs.rs  settings.rs
src-tauri/src/workflow/executor/: dispatcher.rs  mod.rs
src/types/: file.ts  (+5 more)
tactical-engine/: Cargo.toml
worldsmith-agent/: package-lock.json  package.json  tsconfig.cli.json  tsconfig.json
worldsmith-core/: Cargo.toml  rustfmt.toml
worldsmith-core/examples/: basic_validation.rs  diagnostics_demo.rs  migration_demo.rs  plugin_demo.rs  storage_demo.rs
worldsmith-core/src/: error.rs  lib.rs  wasm_export.rs
worldsmith-core/src/algo/: mod.rs
worldsmith-core/src/algo/collab/: crdt.rs
worldsmith-core/src/algo/draft/: constraint.rs  dxf_io.rs  mod.rs
worldsmith-core/src/algo/geometry/: bbox.rs  boolean.rs  line.rs  mod.rs  polygon.rs
worldsmith-core/src/algo/graph/: community.rs  layout.rs  mod.rs  pathfind.rs  topology.rs
worldsmith-core/src/algo/spatial/: rtree.rs
worldsmith-core/src/algo/terrain/: erosion.rs  mod.rs  terrain.rs
worldsmith-core/src/doctor/: diagnostics.rs  mod.rs  plugin.rs  storage.rs
worldsmith-core/src/migrate/: engine.rs
worldsmith-core/src/models/: entity.rs  mod.rs  module.rs  pack.rs  plugin.rs  relation.rs
worldsmith-core/src/retrofit/: a2ui.rs  catalog.rs  changelog.rs  executor.rs  guard.rs  intent.rs  mod.rs  patch.rs  session.rs
worldsmith-core/src/schema/: animation.rs  mod.rs  registry.rs  types.rs  validation.rs
worldsmith-core/src/storage/: mod.rs  sqlite.rs  workflow.rs
worldsmith-core/src/validate/: entity.rs  mod.rs  pack.rs  reference.rs  relation.rs
worldsmith-core/src/workflow/: mod.rs  parser.rs  types.rs  validator.rs
worldsmith-core/tests/: integration.rs  workflow_store_test.rs  workflow_types_test.rs
worldsmith-server/: gen_poster.py  package-lock.json  package.json  pty-manager.ts  python-bridge.ts  save_poster.py  save_poster2.py  server.ts  terminal-launcher.ts  test123.py  tsconfig.json
(+1048 files in other folders)
