[package]
name = "worldsmith-app"
version = "0.1.0"
description = "WorldSmith — 世界观构建工具"
authors = ["WorldSmith"]
edition = "2021"

[lib]
name = "worldsmith_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
worldsmith-core = { path = "../worldsmith-core", features = ["sqlite"] }
portable-pty = "0.9"
tokio = { version = "1", features = ["sync", "time"] }
thiserror = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
