[package]
name = "worldsmith-core"
version = "0.2.0"
edition = "2021"
description = "WorldSmith core library — models, validation, migration, diagnostics, storage"
license = "MIT OR Apache-2.0"
keywords = ["worldbuilding", "validation", "migration", "sqlite", "wasm"]
categories = ["data-structures", "database", "wasm"]
repository = "https://github.com/user/worldsmith"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "serde-wasm-bindgen"]
sqlite = ["rusqlite"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
rstar = "0.12"
dxf = { version = "0.6", features = ["serde"] }
geo = "0.33"
uuid = { version = "1", features = ["v4"] }

wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
optional = true

[[test]]
name = "workflow_store_test"
required-features = ["sqlite"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
